# SFML_WorkFlow

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cpp.yml
